# shanghai-yield-atlas

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  app.js  docker-compose.yml  index.html  pyproject.toml  styles.css
.github/: FUNDING.yml
api/: __init__.py  data_quality.py  env.py  main.py  map_layers.py  mock_data.py  persistence.py  personal_storage.py  provider_adapters.py  reference_catalog.py  requirements-dev.txt  requirements.txt  service.py
db/: customer_data.sql  schema.sql
docs/: CHANGELOG.md  api-contract.md  customer-data-csv-spec.md  import-authorized-data.md  import-geo-assets.md  import-public-browser-capture.md  import-reference-dictionary.md  provider-access-playbook.md  public-sampling-backlog.md  security.md
jobs/: README.md  bootstrap_local_postgres.py  check_data_quality_gate.py  clean_dirty_listings.py  compare_geo_runs.py  enrich_community_anchors.py  import_amap_communities.py  import_authorized_listings.py  import_beike_listings.py  import_browser_scraped_listings.py  import_geo_assets.py  import_macro_housing_index.py  import_osm_geometry.py  import_public_browser_capture.py  import_reference_dictionary.py  load_geo_asset_run_to_postgres.py  load_import_run_to_postgres.py  load_reference_dictionary_to_postgres.py  match_osm_to_communities.py  materialize_public_snapshot.py  refresh_metrics.py
scripts/: browser_capture_smoke.py  browser_review_smoke.py  full_browser_regression.py  guided_sampling_helper.py  phase1_smoke.py  prune_customer_data_runs.py
tests/: conftest.py
(+262 files in other folders)
