[project]
name = "yieldwise"
version = "1.0.0"
description = "Yieldwise · 租知 — 租赁资产投研工作台"
requires-python = ">=3.13"
readme = "README.md"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
    "tmp",
    ".playwright-cli",
    ".pytest_cache",
    ".ruff_cache",
    "output",
    "data/public-snapshot",
]

[tool.ruff.lint]
# Start narrow: only pyflakes (real bug indicators). Style/import-order rules
# can be added later once the codebase is clean enough to enforce them.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# api/service.py re-exports a wide block of names from api/backstage/* so
# downstream callers can keep importing them through the historical path.
# Those re-export lines carry # noqa: E402,F401 directly, so no per-file
# ignore is needed here.
